p2/manifests/app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app1-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app1-volume
        configMap:
          name: app1
