p2/manifests/app1/service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-svc
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
